@@ -1,3 +1,8 @@
+2012-11-22  Yukihiro Nakadaira
+
+	* win_iconv.c: Fix warnings.
+	(Issue 19) (Thanks to yselkowitz)
+
 2012-10-21  Yukihiro Nakadaira
 
 	* win_iconv.c, win_iconv_test.c: Add //ignore and -c flag.
